--- a/index.html
+++ b/index.html
@@ -262,7 +262,15 @@
 			<div class="container">
 				<div class="badge-bar">
 					<div class="left-badges">
+						<!-- YouTube -->
+						<script src="https://apis.google.com/js/platform.js"></script>
+						<a class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default"
+							data-count="default"></a>
 
+						<!-- Twitter -->
+						<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button"
+							data-show-count="false">Follow @BSGOU_X</a>
+						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 						<!-- GitHub -->
 						<a href="https://github.com/LabOnoM" target="_blank">
@@ -279,8 +287,6 @@
 						<button onclick="switchLanguage('cn')">中文</button>
 					</div>
 				</div>
-			</div>
-			<div class="container">
 				<h3 class="titles"
 					data-lang-en="About BSGOU"
 					data-lang-ja="BSGOUについて"
