--- a/index.html
+++ b/index.html
@@ -260,6 +260,24 @@
 				<div class="clearfix"></div>
 			</div>
 			<div class="container">
+				<div class="badge-bar">
+					<div class="left-badges">
+					</div>
+					<div class="right-lang-buttons">
+						<button onclick="switchLanguage('en')">English</button>
+						<button onclick="switchLanguage('ja')">日本語</button>
+						<button onclick="switchLanguage('cn')">中文</button>
+					</div>
+				</div>
+				<div class="badge-bar">
+					<div class="left-badges">
+					</div>
+					<div class="right-lang-buttons">
+						<button onclick="switchLanguage('en')">English</button>
+						<button onclick="switchLanguage('ja')">日本語</button>
+						<button onclick="switchLanguage('cn')">中文</button>
+					</div>
+				</div>
 				<!-- GitHub -->
 				<a href="https://github.com/LabOnoM" target="_blank">
 					<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
@@ -274,6 +292,7 @@
 					data-lang-ja="BSGOUについて"
 					data-lang-cn="关于BSGOU"
 				>About BSGOU</h3>
+
 				<p id="services-desc"
 					data-lang-en="<b>Bioinformatics Study Group in Okayama University (BSGOU)</b> is an international academic community committed to advancing the digital transformation of biological and biomedical research. We unite students, researchers, clinicians, and engineers to collaboratively explore how high-throughput data and integrative computation can drive new theories, models, and discoveries in life sciences.""
 					data-lang-ja="<b>岡山大学バイオインフォマティクス研究会（BSGOU）</b> は、生物学および生物医学研究のデジタルトランスフォーメーションを推進する国際的な学術コミュニティです。私たちは学生、研究者、臨床医、エンジニアが連携し、ハイスループットデータと統合的な計算によって生命科学における新しい理論やモデル、発見を導くことを目指しています。"
