--- a/index.html
+++ b/index.html
@@ -262,15 +262,20 @@
 			<div class="container">
 				<div class="badge-bar">
 					<div class="left-badges">
+					<a> </a>
 					</div>
 					<div class="right-lang-buttons">
-						<button onclick="switchLanguage('en')">English</button>
-						<button onclick="switchLanguage('ja')">日本語</button>
-						<button onclick="switchLanguage('cn')">中文</button>
+						<a></a>
 					</div>
 				</div>
 				<div class="badge-bar">
 					<div class="left-badges">
+						<!-- GitHub -->
+						<a href="https://github.com/LabOnoM" target="_blank">
+							<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
+						</a>
+						<!-- Visitors -->
+						<img src="https://visitor-badge.laobi.icu/badge?page_id=LabOnoM.LabOnoM.github.io" alt="visitor badge" />
 					</div>
 					<div class="right-lang-buttons">
 						<button onclick="switchLanguage('en')">English</button>
