--- a/index.html
+++ b/index.html
@@ -262,27 +262,29 @@
 			<div class="container">
 				<div class="badge-bar">
 					<div class="left-badges">
+						<a> </a>
+					</div>
+					<div class="right-lang-buttons">
+						<a> </a>
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="badge-bar">
+					<div class="left-badges">
 					<a> </a>
 					</div>
 					<div class="right-lang-buttons">
-						<a></a>
+						<a> </a>
 					</div>
 				</div>
-				<div class="badge-bar">
-					<div class="left-badges">
-						<!-- GitHub -->
-						<a href="https://github.com/LabOnoM" target="_blank">
-							<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
-						</a>
-						<!-- Visitors -->
-						<img src="https://visitor-badge.laobi.icu/badge?page_id=LabOnoM.LabOnoM.github.io" alt="visitor badge" />
-					</div>
-					<div class="right-lang-buttons">
-						<button onclick="switchLanguage('en')">English</button>
-						<button onclick="switchLanguage('ja')">日本語</button>
-						<button onclick="switchLanguage('cn')">中文</button>
-					</div>
-				</div>
+				<!-- YouTube -->
+				<a class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default"></a>
+				<script src="https://apis.google.com/js/platform.js"></script>
+				<!-- Twitter -->
+				<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow
+					@BSGOU_X</a>
+				<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				<!-- GitHub -->
 				<a href="https://github.com/LabOnoM" target="_blank">
 					<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
