--- a/index.html
+++ b/index.html
@@ -270,19 +270,14 @@
 				</div>
 			</div>
 			<div class="container">
-				<div class="badge-bar">
-					<div class="left-badges">
-					<a> </a>
-					</div>
-					<div class="right-lang-buttons">
+				<div class="container">
 						<!-- YouTube -->
-						<a class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default"></a>
+						<div class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default"></div>
 						<script src="https://apis.google.com/js/platform.js"></script>
 						<!-- Twitter -->
 						<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow
 							@BSGOU_X</a>
 						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-					</div>
 				</div>
 				<!-- GitHub -->
 				<a href="https://github.com/LabOnoM" target="_blank">
