--- a/index.html
+++ b/index.html
@@ -270,15 +270,6 @@
 				</div>
 			</div>
 			<div class="container">
-				<div class="container">
-						<!-- YouTube -->
-						<div class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default"></div>
-						<script src="https://apis.google.com/js/platform.js"></script>
-						<!-- Twitter -->
-						<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow
-							@BSGOU_X</a>
-						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-				</div>
 				<!-- GitHub -->
 				<a href="https://github.com/LabOnoM" target="_blank">
 					<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
@@ -293,7 +284,22 @@
 					data-lang-ja="BSGOUについて"
 					data-lang-cn="关于BSGOU"
 				>About BSGOU</h3>
-
+				<div class="badge-bar">
+					<div class="left-badges">
+						<a> </a>
+					</div>
+					<div class="right-lang-buttons">
+						<!-- YouTube -->
+						<div class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default">
+						</div>
+						<script src="https://apis.google.com/js/platform.js"></script>
+						<!-- Twitter -->
+						<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button"
+							data-show-count="false">Follow
+							@BSGOU_X</a>
+						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+					</div>
+				</div>
 				<p id="services-desc"
 					data-lang-en="<b>Bioinformatics Study Group in Okayama University (BSGOU)</b> is an international academic community committed to advancing the digital transformation of biological and biomedical research. We unite students, researchers, clinicians, and engineers to collaboratively explore how high-throughput data and integrative computation can drive new theories, models, and discoveries in life sciences.""
 					data-lang-ja="<b>岡山大学バイオインフォマティクス研究会（BSGOU）</b> は、生物学および生物医学研究のデジタルトランスフォーメーションを推進する国際的な学術コミュニティです。私たちは学生、研究者、臨床医、エンジニアが連携し、ハイスループットデータと統合的な計算によって生命科学における新しい理論やモデル、発見を導くことを目指しています。"
