--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
 					</div>
 					<div class="right-lang-buttons">
 						<!-- YouTube -->
-						<div class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default">
-						</div>
+						<span class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default">
+						</span>
 						<script src="https://apis.google.com/js/platform.js"></script>
 						<!-- Twitter -->
 						<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button"
