--- a/index.html
+++ b/index.html
@@ -270,6 +270,29 @@
 				</div>
 			</div>
 			<div class="container">
+				<div class="badge-bar">
+					<div class="left-badges">
+						<a> </a>
+					</div>
+					<div class="right-lang-buttons">
+						<a> </a>
+					</div>
+				</div>
+				<div class="badge-bar">
+					<div class="left-badges">
+						<!-- GitHub -->
+						<a href="https://github.com/LabOnoM" target="_blank">
+							<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
+						</a>
+						<!-- Visitors -->
+						<img src="https://visitor-badge.laobi.icu/badge?page_id=LabOnoM.LabOnoM.github.io" alt="visitor badge" />
+					</div>
+					<div class="right-lang-buttons">
+						<button onclick="switchLanguage('en')">English</button>
+						<button onclick="switchLanguage('ja')">日本語</button>
+						<button onclick="switchLanguage('cn')">中文</button>
+					</div>
+				</div>
 				<!-- GitHub -->
 				<a href="https://github.com/LabOnoM" target="_blank">
 					<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
@@ -286,13 +309,12 @@
 				>About BSGOU</h3>
 				<div class="badge-bar">
 					<div class="left-badges">
-						<a> </a>
-					</div>
-					<div class="right-lang-buttons">
 						<!-- YouTube -->
 						<span class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default">
 						</span>
 						<script src="https://apis.google.com/js/platform.js"></script>
+					</div>
+					<div class="right-lang-buttons">
 						<!-- Twitter -->
 						<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button"
 							data-show-count="false">Follow
