--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
 				<div class="badge-bar">
 					<div class="left-badges">
 						<!-- YouTube -->
-						<span class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default">
-						</span>
+						<a class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default">
+						</a>
 						<script src="https://apis.google.com/js/platform.js"></script>
 					</div>
 					<div class="right-lang-buttons">
