--- a/index.html
+++ b/index.html
@@ -293,15 +293,6 @@
 						<button onclick="switchLanguage('cn')">中文</button>
 					</div>
 				</div>
-				<!-- GitHub -->
-				<a href="https://github.com/LabOnoM" target="_blank">
-					<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
-				</a>
-				<!-- Visitors -->
-				<img src="https://visitor-badge.laobi.icu/badge?page_id=LabOnoM.LabOnoM.github.io" alt="visitor badge" />
-				<button onclick="switchLanguage('en')">English</button>
-				<button onclick="switchLanguage('ja')">日本語</button>
-				<button onclick="switchLanguage('cn')">中文</button>
 				<h3 class="titles"
 					data-lang-en="About BSGOU"
 					data-lang-ja="BSGOUについて"
@@ -310,9 +301,9 @@
 				<div class="badge-bar">
 					<div class="left-badges">
 						<!-- YouTube -->
-						<a class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default">
+						<!-- <a class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default">
 						</a>
-						<script src="https://apis.google.com/js/platform.js"></script>
+						<script src="https://apis.google.com/js/platform.js"></script> -->
 					</div>
 					<div class="right-lang-buttons">
 						<!-- Twitter -->
