--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
 				<div class="badge-bar">
 					<div class="left-badges">
 						<!-- YouTube -->
-						<!-- <a class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default">
+						<a class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default">
 						</a>
-						<script src="https://apis.google.com/js/platform.js"></script> -->
+						<script src="https://apis.google.com/js/platform.js"></script>
 					</div>
 					<div class="right-lang-buttons">
 						<!-- Twitter -->
